<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="my_title">My Nanodegree Apps!</string>
    <string name="first_app">Popular Movies</string>
    <string name="second_app">Stock Hawk</string>
    <string name="third_app">Build It Bigger</string>
    <string name="fourth_app">Make Your App Material</string>
    <string name="fifth_app">Go Ubiquitous</string>
    <string name="sixth_app">Capstone</string>
</resources>
