<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.myappportfolio.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/my_title"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40sp"
        android:textStyle="bold"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/first_app"
        android:id="@+id/button1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20sp"
        android:textColor="#ffffff"
        android:background="#ff6d00"
        android:textStyle="bold"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/second_app"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10sp"
        android:background="#ff6d00"
        android:textColor="#ffffff"
        android:textStyle="bold"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/third_app"
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10sp"
        android:background="#ff6d00"
        android:textColor="#ffffff"
        android:textStyle="bold"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/fourth_app"
        android:id="@+id/button4"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10sp"
        android:background="#ff6d00"
        android:textColor="#ffffff"
        android:textStyle="bold"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/fifth_app"
        android:id="@+id/button5"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10sp"
        android:background="#ff6d00"
        android:textColor="#ffffff"
        android:textStyle="bold"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/sixth_app"
        android:id="@+id/button6"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10sp"
        android:background="#ff6d00"
        android:textColor="#ffffff"
        android:textStyle="bold"/>
</LinearLayout>
